samples/_failures_safe/1761714364_fb9342_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68562ab3.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_68562ab3.c:182:24: error: missing terminating " character
  182 |                 printf("OPERATOR:
      |                        ^~~~~~~~~~
./samples/SAFE/__tmp_68562ab3.c:182:17: error: expected expression at end of input
  182 |                 printf("OPERATOR:
      |                 ^~~~~~
./samples/SAFE/__tmp_68562ab3.c:182:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68562ab3.c:182:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_68562ab3.c:182:17: error: expected declaration or statement at end of input
